# ccqt

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: cmake-multi-platform.yml
src/: configuration_table_model.cpp  configuration_table_model.h  html_delegate.cpp  html_delegate.h  main.cpp  mainwindow.cpp  mainwindow.h  params.cpp  params.h  properties.cpp  properties.h  raw_terminal.cpp  raw_terminal.h  senderthread.cpp  senderthread.h
